Truncate long words in Github issues with ellipses
On the home page, Github issue titles like "Generate improved home_owners_associations.json" are bleeding into the next .billboard.

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -3678,6 +3678,8 @@ a.billboard:active,
 .billboard .billboard-label {
     clear: both;
     display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /* v1 */
